CHANGES IN VERSION 1.51.10
--------------------------

NEW FEATURES:
- filterRt for Chromatogram class (issue #142).

USER VISIBLE CHANGES:
- featureDefinitions and featureValues return DataFrame and matrix with rownames
  corresponding to arbitrary feature IDs (issue #148).

BUG FIXES:
- Issue #146: ensure adjusted retention times returned by the peakGroups method
  to be in the same order than the raw retention times.


CHANGES IN VERSION 1.51.9
-------------------------

NEW FEATURES:
- fillChromPeaks, dropFilledChromPeaks methods and FillChromPeaksParam class.
- featureValues method.

USER VISIBLE CHANGES:
- Extended new_functionality vignette.
- Change default backend for reading mzML files to pwiz.

BUG FIXES:
- Issue #135: fix peak signal integration for centWave.
- Issue #139: problem with expand.mz and expand.rt in fillPeaks.chrom.
- Issue #137: Error in findChromPeaks if no peaks are found.


CHANGES IN VERSION 1.51.8
-------------------------

NEW FEATURES:
- Add Chromatogram class and extractChromatograms method.

BUG FIXES:
- Issue #118: failing unit test on Windows build machine.
- Issue #133: error with c() and xcmsSet without peaks.
- Issue #134: xcmsSet constructor endless loop.


CHANGES IN VERSION 1.51.7
-------------------------

USER VISIBLE CHANGES:
- Major renaming of methods and classes to follow the naming convention:
  - chromatographic peak (chromPeak): the peaks identified in rt dimension.
  - feature: mz-rt feature, being the grouped chromatographic peaks within and
    across samples.

BUG FIXES:
- Issue #127: failing unit test on Windows build machine.


CHANGES IN VERSION 1.51.6
-------------------------

NEW FEATURES:
- groupFeatures and adjustRtime methods for XCMSnExp objects.
- New Param classes for groupFeatures and adjustRtime analysis methods: FeatureDensityParam,
  MzClustParam, NearestFeaturesParam, FeatureGroupsParam and ObiwarpParam.

BUG FIXES:
- Issue #124 (filterRt,XCMSnExp returned empty object).

