@@ -199,7 +199,8 @@ export(
     "do_groupChromPeaks_nearest",
     "Chromatogram",
     "do_adjustRtime_peakGroups",
-    "processHistoryTypes"
+    "processHistoryTypes",
+    "adjustRtimePeakGroups"
 )
 
 ## New analysis methods
