@@ -2185,8 +2185,3 @@ setMethod("dropFilledChromPeaks", "XCMSnExp", function(object) {
         return(object)
 })
 
-## adjustRtimePeakGroups
-## @description \code{adjustRtimePeakGroups} returns the features (peak groups)
-##     which would, depending on the provided \code{\link{PeakGroupsParam}},
-##     be selected for alignment/retention time correction.
-
