@@ -1,11 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/DataClasses.R, R/functions-Params.R,
-%   R/methods-Params.R, R/methods-XCMSnExp.R
+%   R/functions-XCMSnExp.R, R/methods-Params.R, R/methods-XCMSnExp.R
 \docType{class}
 \name{adjustRtime-peakGroups}
 \alias{adjustRtime-peakGroups}
 \alias{PeakGroupsParam-class}
 \alias{PeakGroupsParam}
+\alias{adjustRtimePeakGroups}
 \alias{show,PeakGroupsParam-method}
 \alias{minFraction,PeakGroupsParam-method}
 \alias{minFraction<-,PeakGroupsParam-method}
@@ -31,6 +32,8 @@ groups}
 \usage{
 PeakGroupsParam(minFraction = 0.9, extraPeaks = 1, smooth = "loess",
   span = 0.2, family = "gaussian")
+
+adjustRtimePeakGroups(object, param = PeakGroupsParam())
 
 \S4method{show}{PeakGroupsParam}(object)
 
@@ -91,18 +94,22 @@ containing the results from a previous chromatographic peak detection (see
 
 For all other methods: a \code{PeakGroupsParam} object.}
 
+\item{param}{A \code{PeakGroupsParam} object containing all settings for
+the retention time correction method..}
+
 \item{value}{The value for the slot.}
 
 \item{x}{a \code{PeakGroupsParam} object.}
-
-\item{param}{A \code{PeakGroupsParam} object containing all settings for
-the retention time correction method..}
 }
 \value{
 The \code{PeakGroupsParam} function returns a
 \code{PeakGroupsParam} class instance with all of the settings
 specified for retention time adjustment based on \emph{house keeping}
 features/peak groups.
+
+For \code{adjustRtimePeakGroups}: a \code{matrix}, rows being
+    features, columns samples, of retention times. The features are ordered
+    by the median retention time across columns.
 
 For \code{adjustRtime}: a \code{\link{XCMSnExp}} object with the
 results of the retention time adjustment step. These can be accessed with the
@@ -124,6 +131,10 @@ The \code{PeakGroupsParam} class allows to specify all
 settings for the retention time adjustment based on \emph{house keeping}
 peak groups present in most samples.
 Instances should be created with the \code{PeakGroupsParam} constructor.
+
+\code{adjustRtimePeakGroups} returns the features (peak groups)
+    which would, depending on the provided \code{\link{PeakGroupsParam}},
+    be selected for alignment/retention time correction.
 
 \code{minFraction},\code{minFraction<-}: getter and setter
 for the \code{minFraction} slot of the object.
@@ -196,6 +207,22 @@ res <- groupChromPeaks(res, param = p)
 ## Perform the retention time adjustment using peak groups found in both
 ## files.
 fgp <- PeakGroupsParam(minFraction = 1)
+
+## Before running the alignment we can evaluate which features (peak groups)
+## would be used based on the specified parameters.
+pkGrps <- adjustRtimePeakGroups(res, param = fgp)
+
+## We can also plot these to evaluate if the peak groups span a large portion
+## of the retention time range.
+plot(x = pkGrps[, 1], y = rep(1, nrow(pkGrps)), xlim = range(rtime(res)),
+    ylim = c(1, 2), xlab = "rt", ylab = "", yaxt = "n")
+points(x = pkGrps[, 2], y = rep(2, nrow(pkGrps)))
+segments(x0 = pkGrps[, 1], x1 = pkGrps[, 2],
+    y0 = rep(1, nrow(pkGrps)), y1 = rep(2, nrow(pkGrps)))
+grid()
+axis(side = 2, at = c(1, 2), labels = colnames(pkGrps))
+
+## Next we perform the alignment.
 res <- adjustRtime(res, param = fgp)
 
 ## Any grouping information was dropped
